# video_viral_agent

./: .env  .env.example  .gitignore  README.md  WEB_APP.md  app.py  debug.py  package.json  pyproject.toml  requirements.txt  run.py  run.sh  test_edit.py
.claude/: settings.json
.specs/: viral-moments-detector.spec.md
src/: __init__.py  agents.py  main.py  state.py  workflow.py
src/nodes/: __init__.py  add_subtitles.py  analyze_video.py  edit_video.py  identify_moments.py  refine_clip_context.py  transcribe_audio.py
src/utils/: waveform_analyzer.py
templates/: index.html
